--- a/assets/css/style-starter.css
+++ b/assets/css/style-starter.css
@@ -16050,7 +16050,7 @@ a.read span {
 }
 
 .w3l-feature-6-main {
-  background: url(../images/banner1.jpg) no-repeat center;
+  /* background: url(../images/banner1.jpg) no-repeat center; */
   background-size: cover;
   position: relative;
   z-index: 0;
